# iot-manager

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240425_204716_add_device.rs
src/: auth.rs  connection_manager.rs  device.rs  error.rs  main.rs  message.rs  socket_connection.rs
src/entities/: device.rs  mod.rs  prelude.rs  user.rs
templates/: base.html.askama  index.html.askama  login.html.askama  main.html.askama
templates/device/: create_device_form.html.askama  create_device_result.html.askama  index.html.askama  telemetry.html.askama
templates/error/: 404.html.askama  500.html.askama  unauthorized.html.askama
